# 42028-deep-learning-at02

./: .gitignore  Assignment-2-Notebook-LeikoRavelo-26045171.ipynb  Experiment_1_Classification.ipynb  Part_2_Object_Detection.ipynb  Part_2_Object_Detection_Augment.ipynb  pyproject.toml
lab/: Week5-ConvolutionalNeuralNetworks(CNNs)-Solution-AWS.ipynb  Week7-Checkpointing-TransferLearning-Solution-AWS.ipynb  Week7-Inception-GoogleNet-CNNs-Solution-AWS.ipynb  Week7-Residual-Block-ResNet-CNNs-Solution-AWS.ipynb
